--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 keyssDOCTYPE html>
-<html lang="en">
+<keyssDOCTYPE lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
